kubernetes/infrastructure/base/databases/qdrant/app/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-except-namespace
  namespace: qdrant
spec:
  description: "Allow traffic only to the namespace itself"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": qdrant
  ingress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qdrant-cluster
  namespace: qdrant
spec:
  description: "Allow intra-cluster traffic between qdrant pods"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qdrant
      app.kubernetes.io/instance: qdrant
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: qdrant
            app.kubernetes.io/name: qdrant
            app.kubernetes.io/instance: qdrant
      toPorts:
        - ports:
            - port: "6333"
              protocol: TCP
            - port: "6334"
              protocol: TCP
            - port: "6335"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: qdrant
            app.kubernetes.io/name: qdrant
            app.kubernetes.io/instance: qdrant
      toPorts:
        - ports:
            - port: "6333"
              protocol: TCP
            - port: "6334"
              protocol: TCP
            - port: "6335"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qdrant-server
  namespace: qdrant
spec:
  description: "Allow traffic from openwebui and litellm to qdrant"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qdrant
      app.kubernetes.io/instance: qdrant
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: openwebui
            app.kubernetes.io/name: openwebui
      toPorts:
        - ports:
            - port: "6333"
              protocol: TCP
            - port: "6334"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: litellm
            app.kubernetes.io/name: litellm
      toPorts:
        - ports:
            - port: "6333"
              protocol: TCP
            - port: "6334"
              protocol: TCP
